# symbolic-static-analysis

./: CMakeLists.txt  main.cpp
src/: context.cpp  context.h  declaration.h  driver.cpp  driver.h  evaluator.h  function.cpp  function.h  path.h  solver.cpp  solver.h  util.cpp  util.h  visitor.h
src/ast/: driver.cpp  driver.h  visitor.cpp  visitor.h
src/program/: declaration.cpp  declaration.h  evaluator.cpp  evaluator.h  function.cpp  function.h  path.cpp  path.h
src/solver/: expr_builder.cpp  expr_builder.h  solver.cpp  solver.h
src/util/: types.cpp  types.h
src/variable/: int_variable.cpp  int_variable.h  variable.cpp  variable.h
test/: test_function.cpp  test_path.cpp  test_solver.cpp  test_variable.cpp  util.cpp  util.h
